--- a/index.html
+++ b/index.html
@@ -6,144 +6,201 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
     <title>Recipe Blog Challenge</title>
 </head>
 
 <body>
     <header>
         <h1>Classic Cheesecake Recipe</h1>
-        <em>Look no further for a creamy and ultra smooth classic cheesecake recipe! Paired with a buttery graham
-            cracker crust, no one can deny its simple decadence. For the best results, bake in a water bath.</em>
+        <div class="infoHeader">
+            <img src="..." alt="." srcset="">
+            <em>Look no further for a creamy and ultra smooth classic cheesecake recipe! Paired with a buttery graham
+                cracker crust, no one can deny its simple decadence. For the best results, bake in a water bath.</em>
+        </div>
     </header>
     <section>
         <div class="heroImg"></div>
-        <div class="contenedor">
+        <div class="secciones">
+            <div class="contenedor">
+                <div class="ingredients">
+                    <h2>Ingredients</h2>
+                    <em>Graham Cracker Crust</em>
+                    <form>
+                        <div class="ingrediente">
+                            <input type="checkbox" id="crackers" name="crackers" value="">
+                            <label for="crackers">
+                                1 and 1/2 cups(150g) <strong>graham cracker crumbs</strong>(about 10 full
+                                sheet graham crackers)</label><br>
+                        </div>
+                        <div class="ingrediente">
+                            <input type="checkbox" id="butter" name="butter" value="">
+                            <label for="vehicle2">
+                                5 tablespoons (70g) <strong>unsalted butter</strong>, melted
+                            </label><br>
+                        </div>
+                        <div class="ingrediente">
+                            <input type="checkbox" id="sugar" name="sugar" value="">
+                            <label for="vehicle3">
+                                1/4 cup (50g) <strong>granulated sugar</strong></label>
+                        </div>
+                    </form>
+                    <em>Cheesecake</em>
+                    <form>
+                        <div class="ingrediente">
+                            <input type="checkbox" id="cream cheese" name="cream cheese" value="">
+                            <label for="vehicle1">
+                                four 8-ounce blocks (904g) full-far <strong>cream cheese</strong>, softened to room
+                                temperature</label><br>
+                        </div>
+                        <div class="ingrediente">
+                            <input type="checkbox" id="granulated sugar 2" name="granulated sugar 2" value="">
+                            <label for="granulated sugar 2">
+                                1 cup (200g) <strong>granulated sugar</strong></label><br>
+                        </div>
+                        <div class="ingrediente">
+                            <input type="checkbox" id="sour cream" name="sour cream" value="">
+                            <label for="sour cream">
+                                1 cup (240g) full-fat <strong>sour cream</strong>, at room temperature
+                            </label><br>
+                        </div>
+                        <div class="ingrediente">
+                            <input type="checkbox" id="vanilla" name="vanilla" value="">
+                            <label for="vanilla"> 1 teaspoon <strong> pure vanilla extract </strong></label><br>
+                        </div>
+                        <div class="ingrediente">
+                            <input type="checkbox" id="lemon" name="lemon" value="">
+                            <label for="lemon"> 2 teaspoons <strong>fresh lemon juice</strong> (optional, but
+                                recommended)</label><br>
+                        </div>
+                        <div class="ingrediente">
+                            <input type="checkbox" id="egg" name="egg" value="">
+                            <label for="egg"> 3 large <strong></strong> eggs, at room temperature</label><br>
+                        </div>
+                        <div class="ingrediente">
+                            <input type="checkbox" id="topping" name="topping" value="e">
+                            <label for="topping"> topping suggestions: <em> salted caramel, lemon curd, strawberry
+                                    topping,
+                                    chocolate
+                                    ganache, red wine chocolate ganache, fresh fruit, whipped cream, or raspberry
+                                    sauce</em>(recipe in notes) </label><br>
+                        </div>
+                    </form>
+                </div>
+                <div class="instruction">
+                    <h2>instruction</h2>
+                    <ol>
+                        <li>Adjust the oven rack to the lower-middle position and preheat oven to 350°F (177°C).</li>
+                        <li> <strong> Make the crust:</strong> Using a food processor, pulse the graham crackers into
+                            crumbs.
+                            Pour into a medium
+                            bowl and stir in sugar and melted butter until combined. (You can also pulse it all together
+                            in
+                            the
+                            food processor.) Mixture will be sandy. Press firmly into the bottom and slightly up the
+                            sides
+                            of a
+                            9-inch or 10-inch springform pan. No need to grease the pan first. I use the bottom of a
+                            measuring
+                            cup to pack the crust down tightly. Pre-bake for 8 minutes. Remove from the oven and place
+                            the
+                            hot
+                            pan on a large piece of aluminum foil. The foil will wrap around the pan for the water bath
+                            in
+                            step
+                            4. Allow crust to slightly cool as you prepare the filling.</li>
+                        <li> <strong> Make the filling:</strong> Using a handheld or stand mixer fitted with a paddle
+                            attachment, beat the cream
+                            cheese and granulated sugar together on medium-high speed in a large bowl until the mixture
+                            is
+                            smooth and creamy, about 2 minutes. Add the sour cream, vanilla extract, and lemon juice
+                            then
+                            beat
+                            until fully combined. On medium speed, add the eggs one at a time, beating after each
+                            addition
+                            until
+                            just blended. After the final egg is incorporated into the batter, stop mixing. To help
+                            prevent
+                            the
+                            cheesecake from deflating and cracking as it cools, avoid over-mixing the batter as best you
+                            can.
+                        </li>
+                        <li> <strong> Prepare the simple water bath (see note)</strong> Boil a pot of water. You need 1
+                            inch
+                            of
+                            water in your
+                            roasting pan for the water bath, so make sure you boil enough. I use an entire kettle of hot
+                            water.
+                            As the water is heating up, wrap the aluminum foil around the springform pan. Pour the
+                            cheesecake
+                            batter on top of the crust. Use a rubber spatula or spoon to smooth it into an even layer.
+                            Place
+                            the
+                            pan inside of a large roasting pan. Carefully pour the hot water inside of the pan and place
+                            in
+                            the
+                            oven. (Or you can place the roasting pan in the oven first, then pour the hot water in.
+                            Whichever is
+                            easier for you.)</li>
+                        <li>Bake cheesecake for 55-70 minutes or until the center is almost set. When it’s done, the
+                            center
+                            of
+                            the cheesecake will slightly wobble if you gently shake the pan. Turn the oven off and open
+                            the
+                            oven
+                            door slightly. Let the cheesecake sit in the oven in the water bath as it cools down for 1
+                            hour.
+                            Remove from the oven and water bath, then cool cheesecake completely at room temperature.
+                            Then
+                            refrigerate the cheesecake for at least 4 hours or overnight.</li>
+                        <li>Use a knife to loosen the chilled cheesecake from the rim of the springform pan, then remove
+                            the
+                            rim. Using a clean sharp knife, cut into slices for serving. For neat slices, wipe the knife
+                            clean
+                            and dip into warm water between each slice.</li>
+                        <li>Serve cheesecake with desired toppings. Cover and store leftover cheesecake in the
+                            refrigerator
+                            for
+                            up to 5 days.</li>
+                    </ol>
+                </div>
+                <div class="source">
+                    <em>Source: https://sallysbakingaddiction.com/classic-cheesecake/ </em>
+                </div>
+            </div>
             <div class="card">
                 <ul>
                     <li>
                         <img src="" alt="">
-                        <h4>yields</h3>
-                            <h3>12 servings</h2>
+                        <div>
+                            <h4>yields</h3>
+                                <h3>12 servings</h2>
+                        </div>
                     </li>
                     <li>
                         <img src="" alt="">
-                        <h4>prep time</h4>
-                        <h3>45 minutes</h3>
+                        <div>
+                            <h4>prep time</h4>
+                            <h3>45 minutes</h3>
+                        </div>
                     </li>
                     <li>
                         <img src="" alt="">
-                        <h4>cook time</h4>
-                        <h3>1 hour</h3>
+                        <div>
+                            <h4>cook time</h4>
+                            <h3>1 hour</h3>
+                        </div>
                     </li>
                     <li>
                         <img src="" alt="">
-                        <h4>total time</h4>
-                        <h3>7,75 hours</h3>
+                        <div>
+                            <h4>total time</h4>
+                            <h3>7,75 hours</h3>
+                        </div>
                     </li>
                 </ul>
-            </div>
-            <div class="ingredients">
-                <h2>Ingredients</h2>
-                <em>Graham Cracker Crust</em>
-                <form>
-                    <input type="checkbox" id="crackers" name="crackers" value="">
-                    <label for="vehicle1"> 1 and 1/2 cups(150g) <strong>graham cracker crumbs</strong>(about 10 full
-                        sheet
-                        graham crackers</label><br>
-                    <input type="checkbox" id="butter" name="butter" value="">
-                    <label for="vehicle2"> 5 tablespoons (70g) <strong>unsalted butter</strong>, melted</label><br>
-                    <input type="checkbox" id="sugar" name="sugar" value="">
-                    <label for="vehicle3"> 1/4 cup (50g) <strong>granulated sugar</strong></label>
-                </form>
-                <em>Cheesecake</em>
-                <form>
-                    <input type="checkbox" id="cream cheese" name="cream cheese" value="">
-                    <label for="vehicle1"> four 8-ounce blocks (904g) full-far <strong>cream cheese</strong>, softened
-                        to
-                        room temperature</label><br>
-                    <input type="checkbox" id="granulated sugar 2" name="granulated sugar 2" value="">
-                    <label for="granulated sugar 2"> 1 cup (200g) <strong>granulated sugar</strong></label><br>
-                    <input type="checkbox" id="sour cream" name="sour cream" value="">
-                    <label for="sour cream"> 1 cup (240g) full-fat <strong>sour cream</strong>, at room temperature
-                    </label><br>
-                    <input type="checkbox" id="vanilla" name="vanilla" value="">
-                    <label for="vanilla"> 1 teaspoon <strong> pure vanilla extract </strong></label><br>
-                    <input type="checkbox" id="lemon" name="lemon" value="">
-                    <label for="lemon"> 2 teaspoons <strong>fresh lemon juice</strong> (optional, but
-                        recommended)</label><br>
-                    <input type="checkbox" id="egg" name="egg" value="">
-                    <label for="egg"> 3 large <strong></strong> eggs, at room temperature</label><br>
-                    <input type="checkbox" id="topping" name="topping" value="e">
-                    <label for="topping"> topping suggestions: <em> salted caramel, lemon curd, strawberry topping,
-                            chocolate
-                            ganache, red wine chocolate ganache, fresh fruit, whipped cream, or raspberry sauce
-                        </em>(recipe
-                        in
-                        notes) </label><br>
-                </form>
-            </div>
-            <div class="instruction">
-                <h2>instruction</h2>
-                <ol>
-                    <li>Adjust the oven rack to the lower-middle position and preheat oven to 350°F (177°C).</li>
-                    <li> <strong> Make the crust:</strong> Using a food processor, pulse the graham crackers into
-                        crumbs.
-                        Pour into a medium
-                        bowl and stir in sugar and melted butter until combined. (You can also pulse it all together in
-                        the
-                        food processor.) Mixture will be sandy. Press firmly into the bottom and slightly up the sides
-                        of a
-                        9-inch or 10-inch springform pan. No need to grease the pan first. I use the bottom of a
-                        measuring
-                        cup to pack the crust down tightly. Pre-bake for 8 minutes. Remove from the oven and place the
-                        hot
-                        pan on a large piece of aluminum foil. The foil will wrap around the pan for the water bath in
-                        step
-                        4. Allow crust to slightly cool as you prepare the filling.</li>
-                    <li> <strong> Make the filling:</strong> Using a handheld or stand mixer fitted with a paddle
-                        attachment, beat the cream
-                        cheese and granulated sugar together on medium-high speed in a large bowl until the mixture is
-                        smooth and creamy, about 2 minutes. Add the sour cream, vanilla extract, and lemon juice then
-                        beat
-                        until fully combined. On medium speed, add the eggs one at a time, beating after each addition
-                        until
-                        just blended. After the final egg is incorporated into the batter, stop mixing. To help prevent
-                        the
-                        cheesecake from deflating and cracking as it cools, avoid over-mixing the batter as best you
-                        can.
-                    </li>
-                    <li> <strong> Prepare the simple water bath (see note)</strong> Boil a pot of water. You need 1 inch
-                        of
-                        water in your
-                        roasting pan for the water bath, so make sure you boil enough. I use an entire kettle of hot
-                        water.
-                        As the water is heating up, wrap the aluminum foil around the springform pan. Pour the
-                        cheesecake
-                        batter on top of the crust. Use a rubber spatula or spoon to smooth it into an even layer. Place
-                        the
-                        pan inside of a large roasting pan. Carefully pour the hot water inside of the pan and place in
-                        the
-                        oven. (Or you can place the roasting pan in the oven first, then pour the hot water in.
-                        Whichever is
-                        easier for you.)</li>
-                    <li>Bake cheesecake for 55-70 minutes or until the center is almost set. When it’s done, the center
-                        of
-                        the cheesecake will slightly wobble if you gently shake the pan. Turn the oven off and open the
-                        oven
-                        door slightly. Let the cheesecake sit in the oven in the water bath as it cools down for 1 hour.
-                        Remove from the oven and water bath, then cool cheesecake completely at room temperature. Then
-                        refrigerate the cheesecake for at least 4 hours or overnight.</li>
-                    <li>Use a knife to loosen the chilled cheesecake from the rim of the springform pan, then remove the
-                        rim. Using a clean sharp knife, cut into slices for serving. For neat slices, wipe the knife
-                        clean
-                        and dip into warm water between each slice.</li>
-                    <li>Serve cheesecake with desired toppings. Cover and store leftover cheesecake in the refrigerator
-                        for
-                        up to 5 days.</li>
-                </ol>
-            </div>
-            <div class="source">
-                <em>Source: https://sallysbakingaddiction.com/classic-cheesecake/ </em>
             </div>
         </div>
     </section>
