arreglos en css y html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <h1>Classic Cheesecake Recipe</h1>
         <div class="infoHeader">
-            <img src="..." alt="." srcset="">
+            <img src="css/img/6dots.svg" alt="." class="imgInfoHeader">
             <em>Look no further for a creamy and ultra smooth classic cheesecake recipe! Paired with a buttery graham
                 cracker crust, no one can deny its simple decadence. For the best results, bake in a water bath.</em>
         </div>
@@ -25,7 +25,7 @@
         <div class="heroImg"></div>
         <div class="secciones">
             <div class="contenedor">
-                <div class="ingredients">
+                <div class="ingredients ">
                     <h2>Ingredients</h2>
                     <em>Graham Cracker Crust</em>
                     <form>
@@ -90,7 +90,7 @@
                     </form>
                 </div>
                 <div class="instruction">
-                    <h2>instruction</h2>
+                    <h2 class="playfair">instruction</h2>
                     <ol>
                         <li>Adjust the oven rack to the lower-middle position and preheat oven to 350°F (177°C).</li>
                         <li> <strong> Make the crust:</strong> Using a food processor, pulse the graham crackers into
@@ -173,28 +173,28 @@
             <div class="card">
                 <ul>
                     <li>
-                        <img src="" alt="">
+                        <img src="css/img/" alt="">
                         <div>
                             <h4>yields</h3>
                                 <h3>12 servings</h2>
                         </div>
                     </li>
                     <li>
-                        <img src="" alt="">
+                        <img src="css/img/schedule_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                         <div>
                             <h4>prep time</h4>
                             <h3>45 minutes</h3>
                         </div>
                     </li>
                     <li>
-                        <img src="" alt="">
+                        <img src="css/img/schedule_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                         <div>
                             <h4>cook time</h4>
                             <h3>1 hour</h3>
                         </div>
                     </li>
                     <li>
-                        <img src="" alt="">
+                        <img src="css/img/schedule_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                         <div>
                             <h4>total time</h4>
                             <h3>7,75 hours</h3>
