--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -79,7 +80,7 @@
                             <input type="checkbox" id="egg" name="egg" value="">
                             <label for="egg"> 3 large <strong></strong> eggs, at room temperature</label><br>
                         </div>
-                        <div class="ingrediente">
+                        <div class="ingrediente" style="height: 70px;">
                             <input type="checkbox" id="topping" name="topping" value="e">
                             <label for="topping"> topping suggestions: <em> salted caramel, lemon curd, strawberry
                                     topping,
@@ -91,7 +92,7 @@
                 </div>
                 <div class="instruction">
                     <h2 class="playfair">instruction</h2>
-                    <ol>
+                    <ol class="custom-list">
                         <li>Adjust the oven rack to the lower-middle position and preheat oven to 350°F (177°C).</li>
                         <li> <strong> Make the crust:</strong> Using a food processor, pulse the graham crackers into
                             crumbs.
@@ -173,10 +174,12 @@
             <div class="card">
                 <ul>
                     <li>
-                        <img src="css/img/" alt="">
+                        <span class="material-symbols-outlined material-icons.orange600">
+                            local_dining
+                            </span>
                         <div>
                             <h4>yields</h3>
-                                <h3>12 servings</h2>
+                                <h3 class="orange">12 servings</h2>
                         </div>
                     </li>
                     <li>
@@ -204,7 +207,7 @@
             </div>
         </div>
     </section>
-    <footer>created by username - devChallenges.io</footer>
+    <footer>created by <a href="https://github.com/wadog">wadog</a> - devChallenges.io</footer>
 </body>
 
 </html>
