cambios css mobile

--- a/index.html
+++ b/index.html
@@ -167,21 +167,19 @@
                             up to 5 days.</li>
                     </ol>
                 </div>
-                <div class="source">
-                    <em>Source: https://sallysbakingaddiction.com/classic-cheesecake/ </em>
-                </div>
-            </div>
+            </div>          
             <div class="card">
-                <ul>
-                    <li>
-                        <span class="material-symbols-outlined material-icons.orange600">
-                            local_dining
-                            </span>
+                <div class="title">
+                    <span class="material-symbols-outlined material-icons.orange600">
+                        local_dining
+                        </span>
                         <div>
-                            <h4>yields</h3>
-                                <h3 class="orange">12 servings</h2>
-                        </div>
-                    </li>
+
+                            <h4>yields</h4>
+                            <h3 class="orange">12 servings</h3>
+                            </div>
+                </div>
+                <ul>
                     <li>
                         <img src="css/img/schedule_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                         <div>
@@ -205,6 +203,9 @@
                     </li>
                 </ul>
             </div>
+        </div>
+        <div class="source">
+            <em>Source: <a href="https://sallysbakingaddiction.com/classic-cheesecake/"> https://sallysbakingaddiction.com/classic-cheesecake/</a> </em>
         </div>
     </section>
     <footer>created by <a href="https://github.com/wadog">wadog</a> - devChallenges.io</footer>
